upgrade to jruby-9.1.10 and set default JRUBY_OPTS env var